# dasscc

./: .gitignore  Makefile  benchmark.py  conditioning.py  meson.build  plot.py  produce.sh  reader.py  sparsity.py
doc/: Doxifile.in  development.md  index.md  methods.md
include/: dasscc.hh
include/dasscc/: backward_substitution_solver.hh  benchmark.hh  conjugate_gradient_engine.hh  direct_solver.hh  flags.hh  forward_substitution_solver.hh  gauss_elimination_solver.hh  gauss_seidel_engine.hh  gradient_engine.hh  indirect_solver.hh  iterative_engine.hh  iterative_solver.hh  jacobi_engine.hh  logging.hh  matrix.hh  result.hh  richardson_engine.hh  solver.hh  specifiers.hh  state.hh  testing.hh  timer.hh  traits.hh
pesto/: __main__.py  crafters.py  loaders.py  plotters.py
report/: .gitignore  main.tex
slides/: main.tex
slides/images/: cd-cge.d2  cd-gre.d2  cd-gse.d2  cd-jae.d2  compile.sh
src/: main.cc
src/dasscc/: backward_substitution_solver.cc  benchmark.cc  conjugate_gradient_engine.cc  forward_substitution_solver.cc  gauss_elimination_solver.cc  gauss_seidel_engine.cc  gradient_engine.cc  iterative_solver.cc  jacobi_engine.cc  logging.cc  matrix.cc  richardson_engine.cc  solver.cc  specifiers.cc  state.cc  testing.cc  timer.cc
tests/include/dasscc/: tests.hh
tests/src/: main.cc
tests/src/dasscc/: backward_substitution.cc  conjugate_gradient_engine.cc  forward_substitution.cc  gauss_elimination.cc  gauss_seidel_engine.cc  gradient_engine.cc  jacobi_engine.cc  richardson_engine.cc
